<resources>
    <string name="app_name">AndroidProject3</string>
    <string name="btnChallenges">Daag jezelf uit!</string>
    <string name="btnRestaurants">Restaurants</string>
    <string name="btnRecepten">Recepten</string>
    <string name="btnWorkshops">Workshops</string>
    <string name="btnPrestaties">Prestaties</string>

    <string name="facebook_app_id">749232265202528</string>

    <!-- ACTION BAR -->
    <string name="action_profiel">Profiel</string>
    <string name="action_logout">Log uit</string>

    <!-- LOGIN ACTIVITY -->
    <string name="title_activity_login">Aanmelden</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_wachtwoord">Wachtwoord</string>
    <string name="login">Aanmelden</string>
    <string name="error_invalid_email">Deze email is ongeldig</string>
    <string name="error_invalid_password">Dit wachtwoord is te kort</string>
    <string name="error_incorrect_password">Dit wachtwoord is ongeldig</string>
    <string name="error_field_required">Dit veld is verplicht</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="login_facebook">"Inloggen met Facebook"</string>
    <string name="login_registreer"><u>Nog geen account? Registreer nu!</u></string>
    <string name="title_activity_registreer">Registreer</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_error_400">Beide velden moeten ingevuld zijn!</string>
    <string name="login_error_401">Foute gegevens.</string>
    <string name="login_error_default">Oeps, er ging iets fout, sorry hiervoor! Probeer later nog eens.</string>

    <!-- REGISTREER ACTIVITY -->
    <string name="registreer_titel">Creatie nieuwe account</string>
    <string name="prompt_wachtwoord_opnieuw">Wachtwoord opnieuw invoeren</string>
    <string name="registreer">Mijn account aanmaken</string>
    <string name="registreer_error_400">Alle velden moeten ingevuld zijn!</string>
    <string name="registreer_error_500">Deze email is reeds ingenomen. :( </string>
    <string name="registreer_error_wachtwoorden">De wachtwoorden komen niet overeen!</string>
    <string name="registreer_error_default">Oeps, er ging iets fout, sorry hiervoor! Probeer later nog eens.</string>


    <!-- GEBRUIKERSINFO ACTIVITY -->
    <string name="title_activity_gebruikers_info">Persoonlijke informatie</string>
    <string name="opslaan">Sla op</string>
    <string name="info_titel_normaal">Bekijk of bevestig je persoonlijke informatie.</string>
    <string name="info_titel_eerste_keer">Welkom en bedankt om de Eva Challenge aan te gaan!\n
        Om je uitdagingen beter aan je leefsituatie aan te kunnen passen hadden we graag nog wat extra informatie gehad.\n
        Velden met een * zijn verplicht.</string>
    <string name="username">Gebruikersnaam</string>
    <string name="geboortedatum">Geboortedatum</string>
    <string name="geslacht">Geslacht</string>
        <string name="geslacht_man">Man</string>
        <string name="geslacht_vrouw">Vrouw</string>
    <string name="leefsituatie">Leefsituatie</string>
        <string-array name="leefsituaties">
            <item>Samenwonend</item>
            <item>Alleenstaand</item>
            <item>Kotstudent</item>
        </string-array>
    <string name="gezinsleden">Aantal gezinsleden (inclusief jezelf)</string>
    <string name="ervaring">Ervaring met vegetarisch koken</string>
        <string-array name="ervaringen">
            <item>Starter</item>
            <item>Enthousiast</item>
            <item>Keukenprins(es)</item>
        </string-array>
        <string-array name="gezinsleden">
            <item>1</item> <item>2</item> <item>3</item> <item>4</item>
            <item>5</item> <item>6</item> <item>7</item> <item>8</item>
        </string-array>
</resources>
