<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fb="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.floriangoeteyn.androidproject3.LoginActivity">

    <LinearLayout
        android:id="@+id/email_login_form" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical"
        android:layout_weight="0.7">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_gravity="center"
            android:src="@mipmap/logo_sign_in" />

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/wachtwoord" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_wachtwoord"
                android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <TextView android:id="@+id/loginError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/hoofd_rood"/>

        <Button android:id="@+id/btnLogin" style="?android:textAppearanceSmall"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="16dp" android:text="@string/login"
            android:textStyle="bold" android:textColor="#FFF" android:background="@drawable/button_sign_in"/>

        <TextView
            android:id="@+id/login_registreer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_registreer"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btnFacebookLogin"
            fb:com_facebook_login_text="@string/login_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
