<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_gebruikers_info"
    tools:context="com.example.floriangoeteyn.androidproject3.Fragments.GebruikersInfoFragment"
    android:orientation="vertical"
    android:stretchColumns="1">

    <!--android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    -->

        <TableRow
            android:layout_marginBottom="10dp">
            <TextView
                android:text="@string/username"
                android:layout_weight="1"
                android:layout_width="0dp" android:layout_height="wrap_content"/>
            <EditText android:id="@+id/voornaam"
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:inputType="text" android:capitalize="sentences"
                android:maxLines="1" android:singleLine="true"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_marginBottom="10dp">
            <TextView
                android:text="@string/geslacht"
                android:layout_weight="1"
                android:layout_width="0dp" android:layout_height="wrap_content"/>
            <RadioGroup android:layout_gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_weight="1">
                <RadioButton android:id="@+id/man"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="left"
                    android:checked="false"
                    android:text="@string/geslacht_man"/>
                <RadioButton android:id="@+id/vrouw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="right"
                    android:checked="true"
                    android:text="@string/geslacht_vrouw"/>
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_marginBottom="10dp">
            <TextView
                android:text="@string/geboortedatum"
                android:layout_weight="1"
                android:layout_width="0dp" android:layout_height="wrap_content"/>
            <EditText android:id="@+id/geboortedatum"
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:editable="false" android:maxLines="1" android:singleLine="true"
                android:focusable="false"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_marginBottom="10dp">
            <TextView
                android:text="@string/leefsituatie"
                android:layout_weight="1"
                android:layout_width="0dp" android:layout_height="wrap_content"/>
            <!--
            <EditText android:id="@+id/leefsituatie"
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:editable="false"
                android:maxLines="1" android:singleLine="true"
                android:focusable="false"
                android:layout_weight="1"/>
             -->
            <Spinner android:id="@+id/leefsituatie"
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:editable="false"
                android:maxLines="1" android:singleLine="true"
                android:focusable="false"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content" >
            <TextView
                android:text="@string/gezinsleden"
                android:layout_weight="1"
                android:layout_width="0dp" android:layout_height="wrap_content"/>
            <!--
            <EditText android:id="@+id/gezinsleden"
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:editable="true" android:inputType="number"
                android:maxLines="1" android:singleLine="true"
                android:focusable="false"
                android:layout_weight="1"/>
             -->
            <Spinner android:id="@+id/gezinsleden"
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:editable="false"
                android:maxLines="1" android:singleLine="true"
                android:focusable="false"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_marginBottom="10dp">
            <TextView
                android:text="@string/ervaring"
                android:layout_weight="1"
                android:layout_width="0dp" android:layout_height="wrap_content"/>
            <!--
            <EditText android:id="@+id/ervaring"
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:editable="false"
                android:maxLines="1" android:singleLine="true"
                android:focusable="false"
                android:layout_weight="1"/>
             -->
            <Spinner android:id="@+id/ervaring"
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:editable="false"
                android:maxLines="1" android:singleLine="true"
                android:focusable="false"
                android:layout_weight="1"/>
        </TableRow>

        <!--
        <Button android:id="@+id/btnSlaOp" style="?android:textAppearanceSmall"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="16dp" android:text="@string/opslaan"
            android:textStyle="bold" android:textColor="#FFF" android:background="@drawable/button_sign_in"/>
        -->

</TableLayout>
