<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:fb="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.floriangoeteyn.androidproject3.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:id="@+id/imageView"
            android:layout_gravity="center"
            android:src="@mipmap/logo_sign_in" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/hoofd_donkergroen"
            android:layout_marginBottom="5sp"
            android:text="@string/info_titel_eerste_keer"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableRow
                android:layout_marginBottom="10dp">
                <TextView
                    android:text="@string/prompt_email"
                    android:layout_weight="1"
                    android:layout_width="0dp" android:layout_height="wrap_content"/>
                <EditText android:id="@+id/email"
                    android:layout_width="0dp" android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" android:singleLine="true"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_marginBottom="10dp">
                <TextView
                    android:text="@string/prompt_wachtwoord"
                    android:layout_weight="1"
                    android:layout_width="0dp" android:layout_height="wrap_content"/>
                <EditText android:id="@+id/wachtwoord"
                    android:layout_width="0dp" android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_marginBottom="10dp">
                <TextView
                    android:text="@string/prompt_wachtwoord_opnieuw"
                    android:layout_weight="1"
                    android:layout_width="0dp" android:layout_height="wrap_content"/>
                <EditText android:id="@+id/wachtwoord_opnieuw"
                    android:layout_width="0dp" android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true"
                    android:layout_weight="1"/>
            </TableRow>
        </TableLayout>

        <!--
        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/wachtwoord" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_wachtwoord"
                android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/wachtwoord_opnieuw" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_wachtwoord_opnieuw"
                android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
        -->

        <fragment android:name="com.example.floriangoeteyn.androidproject3.Fragments.GebruikersInfoFragment"
            android:id="@+id/infoFragment"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <TextView android:id="@+id/registreerError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/hoofd_rood"/>

        <Button android:id="@+id/btnRegistreer" style="android:textAppearanceSmall"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="16dp" android:text="@string/registreer"
            android:textStyle="bold" android:textColor="#FFF" android:background="@drawable/button_sign_in"/>

    </LinearLayout>

</ScrollView>
